--- a/ChatApp/src/Main.css
+++ b/ChatApp/src/Main.css
@@ -10,3 +10,24 @@
     width: 100%;
     height: 100vh;
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: #ffffff;
+    border-radius: 8px;
+  }
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(147, 216, 255); 
+    border-radius: 8px;
+    height: 32px;
+}
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(120, 175, 207); 
+  }
