--- a/ChatApp/src/Main.css
+++ b/ChatApp/src/Main.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
 }
 
 #root {
@@ -12,22 +16,42 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
 }
   
 ::-webkit-scrollbar-track {
-    background-color: #ffffff;
+    background-color: #444444; 
     border-radius: 8px;
   }
    
   /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgb(147, 216, 255); 
+  background: #296eff; 
     border-radius: 8px;
     height: 32px;
 }
   
   /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgb(120, 175, 207); 
+    background: #296eff;
   }
+
+p::selection {
+    background-color: #444444; 
+    color: #fff; 
+    caret-color: #fff; 
+}
+
+.Icon {
+  color: #999999;
+}
+
+.Icon:hover {
+  cursor: pointer;
+  color: #296eff;
+}
+
+.IconDisabled:hover {
+  cursor: not-allowed;
+  color: #999999;
+}
