--- a/ChatApp/src/chat/Footer.css
+++ b/ChatApp/src/chat/Footer.css
@@ -1,21 +1,48 @@
 .Chat .Footer {
-    background-color: rgb(56, 56, 56);
-    height: 100px;
+    background-color: #282932;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 1px red;
-}
-
-.boxsizingBorder {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+    border-left: solid 2px #1b1c23;
+    border-right: solid 2px #1b1c23;
 }
 
 .Chat .Footer textarea {
-    width: 98%;
-    background-color: rgb(201, 201, 201);
+    color: #fff;
+    font-size: 16px;
+    width: 100%;
+    background-color: #1e1f25;
+    height: 46px;
     resize: none;
-    padding: 8px;
+    padding: 12px 4px;
+    border: none;
+}
+
+.Chat .Footer textarea::placeholder {
+    color: rgb(156, 156, 156);
+}
+
+.Chat .Footer textarea:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+}
+
+.Chat .Footer textarea::selection {
+    background-color: #444444; 
+    color: #fff; 
+    caret-color: #fff; 
+}
+
+.Chat .Footer .Input {
+    gap: 20px;
+    background-color: #1e1f25;
+    border-radius: 24px 24px 24px 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    margin: 0px 40px;
+    padding: 0px 28px;
 }
