--- a/ChatApp/src/chat/body/Body.css
+++ b/ChatApp/src/chat/body/Body.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding-top: 20px;
-    background-color: rgb(228, 228, 228);
+    padding: 20px;
+    background-color: #131517;
     flex: 1;
     overflow-y: auto;
 }
