--- a/ChatApp/src/chat/Chat.css
+++ b/ChatApp/src/chat/Chat.css
@@ -4,3 +4,21 @@
     background-color:   rgb(170, 170, 170);
     flex: 1;
 }
+
+.Initial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: #131517;
+    flex: 1;
+    font-size: 28px;
+    padding-bottom: 360px;
+}
+
+.Initial p {
+    padding-top: 24px;
+    color: rgb(170, 170, 170);
+    font-size: 16px;
+}
