--- a/ChatApp/src/chat/body/message/my/OtherMessage.css
+++ b/ChatApp/src/chat/body/message/my/OtherMessage.css
@@ -3,16 +3,8 @@
     width: 100%;
     padding: 0px 40px;
     margin-bottom: 10px;
-}
-
-.Chat .Body .Other.MyMessage {
     flex-direction: row-reverse;
     justify-content: end;
-}
-
-.Chat .Body .Other.AnotherMessage {
-    flex-direction: row;
-    justify-content: start;
 }
 
 .Chat .Body .Other .ContainerMessage{
@@ -20,16 +12,8 @@
     width: 50%;
     max-width: 50%;
     align-items: end;
-}
-
-.Chat .Body .Other.MyMessage .ContainerMessage{
     flex-direction: row;
     justify-content: end;
-}
-
-.Chat .Body .Other.AnotherMessage .ContainerMessage{
-    flex-direction: row-reverse;
-    justify-content: start;
 }
 
 .Chat .Body .Other .Message{
@@ -38,22 +22,16 @@
     width:fit-content;
     max-width: 100%;
     border-radius: 12px 12px 12px 12px;
-}
-
-.Chat .Body .Other .Message .Text{
     font-size: 14px;
     font-weight: 400;
-}
-
-.Chat .Body .Other.MyMessage .Message{
     background-color: #296eff;
     margin: 0px 10px 0px 0px;
 }
 
-.Chat .Body .Other.AnotherMessage .Message{
-    background-color: #1e1f25;
-    margin: 0px 0px 0px 10px;
-}
+/* .Chat .Body .Other .Message .Text{
+    font-size: 14px;
+    font-weight: 400;
+} */
 
 .Chat .Body .Other .Date{
     color:rgb(156, 156, 156);
